--- a/PP_3_1_2_Boot_Security/src/main/resources/application.properties
+++ b/PP_3_1_2_Boot_Security/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+#Data Source
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/evrdkv
+spring.datasource.username=evrdkv
+spring.datasource.password=03021966Evgesh
 
+# Hibernate properties
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
